# personal-assistant

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: TECHNICAL.md
src/pde/: agent.py  calendar_sync.py  cli.py  db.py  services.py
tests/: test_services.py
